started mui styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -16,4 +16,4 @@
   display: inline-flex;
   flex-wrap: wrap;
   width:320px
-}
+} */
